# rebus-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/api/v1/: urls.py
api/api/v1/views/: __init__.py
api/core/: models.py
app/: constants.py  settings.py  urls.py
world_cup/: apps.py  exceptions.py
world_cup/admin/: __init__.py  player_admin.py  staff_admin.py  team_admin.py
world_cup/api/v1/: urls.py
world_cup/api/v1/serializers/: __init__.py  player_serializer.py  staff_serializer.py  team_serializer.py
world_cup/api/v1/views/: __init__.py  base_views.py  meta_views.py  resume_views.py  world_cup_views.py
world_cup/fixtures/: players.json  teams.json
world_cup/fixtures/test/: players.json  staff.json
world_cup/models/: __init__.py  base_model.py  person_model.py  player_model.py  staff_model.py  team_model.py
world_cup/process/: __init__.py  base_process.py  player_process.py  staff_process.py  team_process.py
world_cup/tests/test_process/: test_player_process.py  test_resumen.py  test_staff_process.py  test_team_process.py
